--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         {
             "src":"./index.py",
             "use":"@vercel/python",
-            "congig":{"runtime":"python3.9"}
+            "config":{"runtime":"python3.9"}
         }
 
     ],
